sandboxBranch: kuina選択時の、requiredTxCustomizer削除を有効に。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@915 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -653,9 +653,9 @@
           <initMethod name="addCustomizer">
             <arg>traceCustomizer</arg>
           </initMethod>
-          <initMethodXXX name="addCustomizer"><!-- TODO まだ無効 -->
+          <initMethod name="addCustomizer" counteract="true">
             <arg>requiredTxCustomizer</arg>
-          </initMethodXXX>
+          </initMethod>
         </component>
         <component name="logicCustomizer">
           <initMethod name="addCustomizer">
