sandboxBranch: S2JMS選択時の、requiredTxCustomizer削除を有効に。& teedaでのtestLibPathの設定ミス修正。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@916 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -247,7 +247,7 @@
       <contextProperty name="mainOutPath" value="src/main/webapp/WEB-INF/classes" />
       <contextProperty name="libPath" value="src/main/webapp/WEB-INF/lib" />
       <contextProperty name="libSrcPath" value="src/main/webapp/WEB-INF/lib" />
-      <contextProperty name="testLibPath" value="lib/sources" />
+      <contextProperty name="testLibPath" value="lib" />
       <contextProperty name="testLibSrcPath" value="lib/sources" />
       <handler type="default" resourceLoader="maven">
         <entry kind="file" path="${mainJavaPath}/${packagePath}/web/error/ErrorPage.java" />
@@ -779,6 +779,11 @@
         <component name="listenerCreator" class="org.seasar.jms.container.creator.ListenerCreator"/>
       </handler>
       <handler type="customizerDicon">
+        <component name="serviceCustomizer">
+          <initMethod name="addCustomizer" counteract="true">
+            <arg>requiredTxCustomizer</arg>
+          </initMethod>
+        </component>
         <component name="listenerCustomizer">
           <initMethod name="addCustomizer">
             <arg>traceCustomizer</arg>
