JREUtils refactor, Project生成時、LocalMavenReposにターゲットが存在しても一瞬Downloadダイアログが出てしまう不具合修正, SAStrutsのlib出力先修正, SAStrutsのIndexAction追加, WTPにおいてJavaVersionが上手く扱えていなかった件を修正, WizardPageで、package名を入力してもFinishボタンがenableされない不具合を修正, teeda固有リソースを、template/resourcesからtemplate/teedaに移動。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@918 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -408,15 +408,19 @@
         root="template/sastruts"
         displayOrder="PR03"
         description="%facetDesc.SAStruts">
-      <contextProperty name="mainOutPath" value="webapp/WEB-INF/classes" />
-      <contextProperty name="webAppRoot" value="webapp" />
+      <contextProperty name="mainOutPath" value="src/main/webapp/WEB-INF/classes" />
+      <contextProperty name="webAppRoot" value="src/main/webapp" />
       <contextProperty name="libPath" value="src/main/webapp/WEB-INF/lib" />
       <contextProperty name="libSrcPath" value="src/main/webapp/WEB-INF/lib/sources" />
       <handler type="default" resourceLoader="maven">
+        <entry path="${mainJavaPath}/${packagePath}/action" />
+        <entry path="${testJavaPath}/${packagePath}/action" />
+        <entry path="${mainResourcePath}/${packagePath}/action" />
+        <entry kind="file" path="${mainJavaPath}/${packagePath}/action/IndexAction.java" />
         <entry kind="file" path="${webAppRoot}/WEB-INF/web.xml" />
         <entry kind="file" path="${webAppRoot}/WEB-INF/struts-config.xml" />
         <entry kind="file" path="${webAppRoot}/WEB-INF/validator-rules.xml" />
-        <entry kind="file" path="${webAppRoot}/index.jsp" />
+        <entry kind="file" path="${webAppRoot}/start.jsp" />
         <entry kind="file" path="${mainResourcePath}/application.properties" />
         <entry kind="file" path="${mainResourcePath}/application_ja.properties" />
         <entry kind="file" path="${webAppRoot}/common/common.jsp" />
