--- a/org.seasar.dolteng.projects/template/WTP/org.eclipse.jst.common.project.facet.core.prefs
+++ b/org.seasar.dolteng.projects/template/WTP/org.eclipse.jst.common.project.facet.core.prefs
@@ -1,2 +1,2 @@
-classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jdk1.5.0_10/owners=jst.java\:5.0
+classpath.helper/${jreContainer}/owners=jst.java\:${javaVersion2}
 eclipse.preferences.version=1
