--- a/dolteng/org.seasar.dolteng.projects/template/512/pom.xml
+++ b/dolteng/org.seasar.dolteng.projects/template/512/pom.xml
@@ -119,17 +119,17 @@
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-extension</artifactId>
-			<version>2.4.18-rc1</version>
+			<version>2.4.22</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-framework</artifactId>
-			<version>2.4.18-rc1</version>
+			<version>2.4.22</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-tiger</artifactId>
-			<version>2.4.18-rc1</version>
+			<version>2.4.22</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.wicket</groupId>
@@ -139,12 +139,12 @@
 		<dependency>
 			<groupId>org.seasar.dao</groupId>
 			<artifactId>s2-dao</artifactId>
-			<version>1.0.47-RC1</version>
+			<version>1.0.47</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.dao</groupId>
 			<artifactId>s2-dao-tiger</artifactId>
-			<version>1.0.47-RC1</version>
+			<version>1.0.47</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
