JREUtils refactor, S2RMI使用時もserviceCustomizerにrequiredTxCustomizerを出力しないよう修正, ChuraProjectWizardPageで、JRE選択コンボの挙動を微調整。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@925 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -843,6 +843,13 @@
         <include path="app_aop.dicon" />
         <include path="dxo.dicon" />
       </handler>
+      <handler type="customizerDicon">
+        <component name="serviceCustomizer">
+          <initMethod name="addCustomizer" counteract="true">
+            <arg>requiredTxCustomizer</arg>
+          </initMethod>
+        </component>
+      </handler>
     </facet>
     <facet id="s2rmiServer" name="S2RMI (Server)"
         extends="s2rmi"
