--- a/org.seasar.dolteng.eclipse.dependency.feature/feature.properties
+++ b/org.seasar.dolteng.eclipse.dependency.feature/feature.properties
@@ -14,4 +14,4 @@
 # governing permissions and limitations under the License.
 ###############################################################################
 author=the Seasar Foundation
-plugin.brand=Dolteng Eclipse Plugin (for offline) (optional)
+plugin.brand=Dolteng Dependency for offline (optional)
