sandboxBranch: ダウンロード設定のPreferencePageが変だった。 mvnbeasnをJava6でコンパイルしてた＞＜
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@941 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.eclipse.plugin/.settings/org.eclipse.jdt.ui.prefs
+++ b/org.seasar.dolteng.eclipse.plugin/.settings/org.eclipse.jdt.ui.prefs
@@ -1,7 +1,6 @@
-#Thu Jan 25 16:45:03 JST 2007
+#Mon Mar 10 10:45:01 GMT+09:00 2008
 eclipse.preferences.version=1
 formatter_settings_version=10
-internal.default.compliance=default
 org.eclipse.jdt.ui.exception.name=e
 org.eclipse.jdt.ui.gettersetter.use.is=true
 org.eclipse.jdt.ui.ignorelowercasenames=true
