--- a/org.seasar.dolteng.eclipse.plugin/.classpath
+++ b/org.seasar.dolteng.eclipse.plugin/.classpath
@@ -31,8 +31,8 @@
 	<classpathentry kind="lib" path="lib/commons-vfs-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/jaxen-1.0-FCS.jar"/>
 	<classpathentry kind="lib" path="lib/jdom-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/mvnbeans-1.0-SNAPSHOT.jar" sourcepath="lib/sources/mvnbeans-1.0-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="lib" path="lib/saxpath-1.0-FCS.jar"/>
+	<classpathentry kind="lib" path="lib/mvnbeans-1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="template/jars/commons-collections-3.1.jar" sourcepath="template/jars/sources/commons-collections-3.1-sources.jar"/>
